Correcting my template logic syntax. Refs #759

--- a/openrem/remapp/templates/remapp/home.html
+++ b/openrem/remapp/templates/remapp/home.html
@@ -139,7 +139,7 @@
         )
     </script>
     <p>
-    <p id="summary-progress">ct progress</p>
+    <p id="summary-progress">migration progress should be here...</p>
     </p>
     <table class="table table-bordered">
         <tr>
