Adding summary tags to CT fitered. Refs #759

--- a/openrem/remapp/templates/remapp/ctfiltered.html
+++ b/openrem/remapp/templates/remapp/ctfiltered.html
@@ -174,11 +174,13 @@
                 </td>
                 <td>
                     <a href="{% url 'ct_detail_view' pk=exam.id %}">
+                        {{ exam.number_of_events }}
                         {{ ct_accumulated.total_number_of_irradiation_events }}
                     </a>
                 </td>
                 <td>
                     <a href="{% url 'ct_detail_view' pk=exam.id %}">
+                        {{ exam.total_dlp|floatformat:2 }}
                         {{ ct_accumulated.ct_dose_length_product_total|floatformat:2 }}
                     </a>
                 </td>
