--- a/openrem/remapp/templates/remapp/populate_summary_progress.html
+++ b/openrem/remapp/templates/remapp/populate_summary_progress.html
@@ -1,6 +1,6 @@
 <h4>CT</h4>
 {% if not ct_status.complete %}
-Currently processing {{ ct_status.current_study }} of {{ ct_status.total_studies }}.
+Currently processing {{ ct_status.current_study }} of {{ ct_status.total_studies }}
 <div class="progress">
   <div class="progress-bar progress-bar-striped active" role="progressbar"
        aria-valuenow="{{ ct_pc }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ ct_pc }}%">
@@ -17,7 +17,7 @@ Currently processing {{ ct_status.current_study }} of {{ ct_status.total_studies
 
 <h4>RF</h4>
 {% if not rf_status.complete %}
-Currently processing {{ rf_status.current_study }} of {{ rf_status.total_studies }}.
+Currently processing {{ rf_status.current_study }} of {{ rf_status.total_studies }}
 <div class="progress">
   <div class="progress-bar progress-bar-striped active" role="progressbar"
        aria-valuenow="{{ rf_pc }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ rf_pc }}%">
@@ -34,7 +34,7 @@ Currently processing {{ rf_status.current_study }} of {{ rf_status.total_studies
 
 <h4>MG</h4>
 {% if not mg_status.complete %}
-Currently processing {{ mg_status.current_study }} of {{ mg_status.total_studies }}.
+Currently processing {{ mg_status.current_study }} of {{ mg_status.total_studies }}
 <div class="progress">
   <div class="progress-bar progress-bar-striped active" role="progressbar"
        aria-valuenow="{{ mg_pc }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ mg_pc }}%">
@@ -51,7 +51,7 @@ Currently processing {{ mg_status.current_study }} of {{ mg_status.total_studies
 
 <h4>DX</h4>
 {% if not dx_status.complete %}
-Currently processing {{ dx_status.current_study }} of {{ dx_status.total_studies }}.
+Currently processing {{ dx_status.current_study }} of {{ dx_status.total_studies }}
 <div class="progress">
   <div class="progress-bar progress-bar-striped active" role="progressbar"
        aria-valuenow="{{ dx_pc }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ dx_pc }}%">
