Added upgrade status singleton to db model, set automatically when each modality complete, then doesn't update on homepage anymore. Refs #759

--- a/openrem/remapp/templates/remapp/home.html
+++ b/openrem/remapp/templates/remapp/home.html
@@ -101,6 +101,7 @@
 {% block mainblock %}
 
     <script>
+        {% if not migration_complete %}
         $(document).ready(
             function populate_summary_progress(json) {
                 $.ajax(
@@ -119,7 +120,7 @@
                     }
                 )
             }
-        );
+        ); {% endif %}
         $(document).ready(
             function get_modality_numbers(json) {
                 $.ajax(
@@ -139,7 +140,7 @@
         )
     </script>
     <p>
-    <p id="summary-progress">migration progress should be here...</p>
+    <p id="summary-progress"></p>
     </p>
     <table class="table table-bordered">
         <tr>
