--- a/openrem/remapp/templates/remapp/populate_summary_progress_error.html
+++ b/openrem/remapp/templates/remapp/populate_summary_progress_error.html
@@ -7,8 +7,8 @@
             <p>
                 {% if not_admin %}
                     <p>
-                        Upgrading to OpenREM release x requires a data migration. Log in as an admin user to start the
-                        process or to view the migration progress.
+                        Upgrading to OpenREM release 0.10 requires a data migration. Log in as an admin user to start
+                        the process or to view the migration progress.
                     </p>
                     <p>
                         During the migration you will be
@@ -18,7 +18,7 @@
                     </p>
                 {% else %}
                     <p>
-                        Upgrading to OpenREM release x requires a data migration. Please start the migration by
+                        Upgrading to OpenREM release 0.10 requires a data migration. Please start the migration by
                         <a href="{% url 'populate_summary' %}">clicking here</a>.
                     </p>
                     <p>
