--- a/openrem/remapp/templates/remapp/rffiltered.html
+++ b/openrem/remapp/templates/remapp/rffiltered.html
@@ -42,6 +42,10 @@
                  class="btn btn-default btn-sm" role="button">With both</a>
           {% endif %}
     </p>
+    <p>
+        <a href="{% url 'rf_xlsx_phe2019' %}?{{ request.GET.urlencode }}"
+           class="btn btn-default btn-sm" role="button">PHE 2019 Survey</a>
+    </p>
 
   {% else %}
     <p>
