--- a/openrem/remapp/templates/remapp/dxfiltered.html
+++ b/openrem/remapp/templates/remapp/dxfiltered.html
@@ -6,7 +6,7 @@
 {% block toprow %}
 
     <p>
-        There are {{ filter.count }} studies in this list.
+        There are {{ filter.qs.count }} studies in this list.
     </p>
 
 {% endblock %}
