MG working as per CT, DX, RF. Refs #437 [skip ci] - not ready for testing

--- a/openrem/remapp/templates/remapp/mgfiltered.html
+++ b/openrem/remapp/templates/remapp/mgfiltered.html
@@ -4,7 +4,7 @@
 
 {% block toprow %}
       <p>
-        There are {{ filter|length }} studies in this list.
+        There are {{ filter.qs.count }} studies in this list.
       </p>
 {% endblock %}
 
