--- a/openrem/remapp/templates/remapp/mgdetail.html
+++ b/openrem/remapp/templates/remapp/mgdetail.html
@@ -86,10 +86,10 @@
     <tr>
         <td>{{ event.date_time_started|time:"H:i.s" }}</td>
         <td>{{ event.acquisition_protocol }}</td>
-        <td>{{ event.laterality.code_meaning }} breast, {{ event.image_view }}</td>
+        <td>{{ event.laterality.code_meaning }} breast, {{ event.image_view.code_meaning }}</td>
         <td>{{ event.irradeventxraymechanicaldata_set.get.compression_thickness|floatformat:0  }}</td>
-        <td>{{ source_data.anode_target_material }}</td>
-        <td>{{ source_data.xrayfilters_set.get.xray_filter_material }}</td>
+        <td>{{ source_data.anode_target_material.code_meaning }}</td>
+        <td>{{ source_data.xrayfilters_set.get.xray_filter_material.code_meaning }}</td>
         <td>{{ source_data.kvp_set.get.kvp|floatformat:0 }}</td>
         <td>{{ source_data.average_xray_tube_current|floatformat:1 }}</td>
         <td>{{ source_data.exposure_time|floatformat:0 }}</td>
