Adding study level comment to RF detail template. Refs #785

--- a/openrem/remapp/templates/remapp/rfdetail.html
+++ b/openrem/remapp/templates/remapp/rfdetail.html
@@ -482,6 +482,8 @@
       {% endwith %}{% endwith %}
     {% endfor %}
 </table>
+    <h4>Study level comment</h4>
+    <p>{{ projection_xray_dose_set.comment }}</p>
 
 {% if is_paginated %}
 <p class="pagination">
