Converted QR page echos to AJAX. Currently with hardcoded URLs as the lookup wasn't being recognised. [skip ci] netdicom testing disabled.

--- a/openrem/remapp/templates/remapp/dicomqr.html
+++ b/openrem/remapp/templates/remapp/dicomqr.html
@@ -58,19 +58,61 @@
       Remote QR nodes
       <dl class="dl-horizontal">
         {% autoescape off %}
-          {% for name, status in qrstatus.items %}
-            <dt>{{ name }}</dt>
-            <dd>{{ status }}</dd>
-          {% endfor %}
+      {% for qr_node in qr_nodes %}
+  <script>
+      $(document).ready(
+          function get_qr_status(json) {
+              $.ajax(
+                  {
+                      url: "/dicom/qrnodestatus",
+                      data: {
+                          node: '{{ qr_node.pk }}',
+                          csrfmiddlewaretoken: '{{ csrf_token }}'
+                      },
+                      type: "POST",
+                      success: function (data) {
+                          $('#qrnode{{ qr_node.pk }}').html(data);
+                      }
+                  }
+              )
+          }
+      )
+  </script>
+<dt>{{ qr_node.name }}</dt>
+      <dd id="qrnode{{ qr_node.pk }}">Waiting for verification response</dd>
+
+      {% endfor %}
+
         {% endautoescape %}
       </dl>
       Local Store nodes
       <dl class="dl-horizontal">
         {% autoescape off %}
-          {% for name, status in storestatus.items %}
-            <dt>{{ name }}</dt>
-            <dd>{{ status }}</dd>
-          {% endfor %}
+      {% for store_node in store_nodes %}
+  <script>
+      $(document).ready(
+          function get_store_status(json) {
+              $.ajax(
+                  {
+                      url: "/dicom/storenodestatus",
+                      data: {
+                          node: '{{ store_node.pk }}',
+                          csrfmiddlewaretoken: '{{ csrf_token }}'
+                      },
+                      type: "POST",
+                      success: function (data) {
+                          $('#storenode{{ store_node.pk }}').html(data);
+                      }
+                  }
+              )
+          }
+      )
+  </script>
+<dt>{{ store_node.name }}</dt>
+      <dd id="storenode{{ store_node.pk }}">Waiting for verification response</dd>
+
+      {% endfor %}
+
         {% endautoescape %}
       </dl>
 
