--- a/openrem/remapp/templates/remapp/dicomqr.html
+++ b/openrem/remapp/templates/remapp/dicomqr.html
@@ -51,75 +51,75 @@
   <script src="{{ STATIC_URL }}js/dicom.js"></script>
   <script src="{{ STATIC_URL }}js/django_reverse/reverse.js"></script>
 
-  <div class="row">
+<div class="row">
     <div class="col-md-4 col-md-offset-1">
 
-      <h3>Current DICOM SCP statuses</h3>
-      Remote QR nodes
-      <dl class="dl-horizontal">
-        {% autoescape off %}
-      {% for qr_node in qr_nodes %}
-  <script>
-      $(document).ready(
-          function get_qr_status(json) {
-              $.ajax(
-                  {
-                      url: "/dicom/qrnodestatus",
-                      data: {
-                          node: '{{ qr_node.pk }}',
-                          csrfmiddlewaretoken: '{{ csrf_token }}'
-                      },
-                      type: "POST",
-                      success: function (data) {
-                          $('#qrnode{{ qr_node.pk }}').html(data);
-                      }
-                  }
-              )
-          }
-      )
-  </script>
-<dt>{{ qr_node.name }}</dt>
-      <dd id="qrnode{{ qr_node.pk }}">Waiting for verification response</dd>
+        <h3>Current DICOM SCP statuses</h3>
+        Remote QR nodes
+        <dl class="dl-horizontal">
+            {% autoescape off %}
+            {% for qr_node in qr_nodes %}
+                <script>
+                    $(document).ready(
+                        function get_qr_status(json) {
+                            $.ajax(
+                                {
+                                    url: "{% url 'get_qr_status' %}",
+                                    data: {
+                                        node: '{{ qr_node.pk }}',
+                                        csrfmiddlewaretoken: '{{ csrf_token }}'
+                                    },
+                                    type: "POST",
+                                    success: function (data) {
+                                        $('#qrnode{{ qr_node.pk }}').html(data);
+                                    }
+                                }
+                            )
+                        }
+                    )
+                </script>
+                <dt>{{ qr_node.name }}</dt>
+                <dd id="qrnode{{ qr_node.pk }}">Waiting for verification response</dd>
 
-      {% endfor %}
+            {% endfor %}
 
-        {% endautoescape %}
-      </dl>
-      Local Store nodes
-      <dl class="dl-horizontal">
-        {% autoescape off %}
-      {% for store_node in store_nodes %}
-  <script>
-      $(document).ready(
-          function get_store_status(json) {
-              $.ajax(
-                  {
-                      url: "/dicom/storenodestatus",
-                      data: {
-                          node: '{{ store_node.pk }}',
-                          csrfmiddlewaretoken: '{{ csrf_token }}'
-                      },
-                      type: "POST",
-                      success: function (data) {
-                          $('#storenode{{ store_node.pk }}').html(data);
-                      }
-                  }
-              )
-          }
-      )
-  </script>
-<dt>{{ store_node.name }}</dt>
-      <dd id="storenode{{ store_node.pk }}">Waiting for verification response</dd>
+            {% endautoescape %}
+        </dl>
+        Local Store nodes
+        <dl class="dl-horizontal">
+            {% autoescape off %}
+            {% for store_node in store_nodes %}
+                <script>
+                    $(document).ready(
+                        function get_store_status(json) {
+                            $.ajax(
+                                {
+                                    url: "{%  url 'get_store_status' %}",
+                                    data: {
+                                        node: '{{ store_node.pk }}',
+                                        csrfmiddlewaretoken: '{{ csrf_token }}'
+                                    },
+                                    type: "POST",
+                                    success: function (data) {
+                                        $('#storenode{{ store_node.pk }}').html(data);
+                                    }
+                                }
+                            )
+                        }
+                    )
+                </script>
+                <dt>{{ store_node.name }}</dt>
+                <dd id="storenode{{ store_node.pk }}">Waiting for verification response</dd>
 
-      {% endfor %}
+            {% endfor %}
 
-        {% endautoescape %}
-      </dl>
+            {% endautoescape %}
+        </dl>
 
-      <h3>Query retrieve dialogue</h3>
+        <h3>Query retrieve dialogue</h3>
 
-      {% load crispy_forms_tags %}
-      {% crispy form %}
+        {% load crispy_forms_tags %}
+        {% crispy form %}
     </div>
 
 
