--- a/openrem/remapp/templates/remapp/displaynameview.html
+++ b/openrem/remapp/templates/remapp/displaynameview.html
@@ -123,7 +123,7 @@
           function get_failed_imports_list(json) {
               $.ajax(
                   {
-                      url: "/populatefailedimportlist",
+                      url: "{% url 'failed_list_populate' %}",
                       data: {
                           csrfmiddlewaretoken: '{{ csrf_token }}'
                       },
