Added table of sub-ops summary. Requires database migration. Refs #530. [skip ci] netdicom testing disabled.

--- a/openrem/remapp/templates/remapp/dicomqr.html
+++ b/openrem/remapp/templates/remapp/dicomqr.html
@@ -130,6 +130,7 @@
       </div>
       <div class="row">
         <div id="move-status"></div>
+        <div id="subops"></div>
       </div>
     </div>
   </div>
