--- a/openrem/remapp/templates/remapp/dicomqr.html
+++ b/openrem/remapp/templates/remapp/dicomqr.html
@@ -130,6 +130,8 @@
       </div>
       <div class="row">
         <div id="move-status"></div>
+      </div>
+      <div class="row">
         <div id="subops"></div>
       </div>
     </div>
