--- a/openrem/remapp/templates/remapp/exports.html
+++ b/openrem/remapp/templates/remapp/exports.html
@@ -106,7 +106,11 @@
             <td>{{ tsk.processtime|naturalduration }} </td>
             <td>{{ tsk.export_user }}</td>
             {% if not tsk.includes_pid or tsk.includes_pid and admin.pidgroup %}
-              <td><a href="{% url 'download' task_id=tsk.task_id %}">{{ tsk.filename }}</a></td>
+              {% if tsk.task_id %}
+                <td><a href="{% url 'download' task_id=tsk.task_id %}">{{ tsk.filename }}</a></td>
+              {% else %}
+                <td>{{ tsk.filename }}</td>
+              {% endif %}
             {% else %}
               <td>You don't have sufficient privileges to download this export</td>
             {% endif %}
