--- a/openrem/remapp/templates/remapp/celery_tasks_complete.html
+++ b/openrem/remapp/templates/remapp/celery_tasks_complete.html
@@ -1,14 +1,16 @@
 <table class="table sortable" id="{{ type }}">
   <tr>
-    <th id="uuid_{{ type }}" onclick="updateSort(this.id, 'user_click');" style="width: 30%">UUID</th>
-    <th id="task_{{ type }}" onclick="updateSort(this.id, 'user_click');" style="width: 24%">Task</th>
-    <th id="received_{{ type }}" onclick="updateSort(this.id, 'user_click');" style="width: 18%">Received</th>
-    <th id="started_{{ type }}" onclick="updateSort(this.id, 'user_click');" style="width: 18%">Started</th>
+    <th id="uuid_{{ type }}" onclick="updateSort(this.id, 'user_click');" style="width: 15%">UUID</th>
+    <th id="message_{{ type }}" onclick="updateSort(this.id, 'user_click');" style="width: 15%">Message</th>
+    <th id="task_{{ type }}" onclick="updateSort(this.id, 'user_click');" style="width: 19%">Task</th>
+    <th id="received_{{ type }}" onclick="updateSort(this.id, 'user_click');" style="width: 13%">Received</th>
+    <th id="started_{{ type }}" onclick="updateSort(this.id, 'user_click');" style="width: 13%">Started</th>
     <th id="state_{{ type }}" onclick="updateSort(this.id, 'user_click');">State</th>
   </tr>
   {% for task in tasks %}
     <tr>
       <td>{{ task.uuid }}</td>
+      <td>{{ task.message }}</td>
       <td>{{ task.name }}</td>
       <td sorttable_customkey="{{ task.received_delta_s }}">{{ task.received }}</td>
       <td sorttable_customkey="{{ task.started_delta_s }}">{{ task.started }}</td>
