--- a/openrem/remapp/templates/remapp/celery_tasks_complete.html
+++ b/openrem/remapp/templates/remapp/celery_tasks_complete.html
@@ -1,7 +1,8 @@
 <table class="table sortable" id="{{ type }}">
   <tr>
     <th id="uuid_{{ type }}" onclick="updateSort(this.id, 'user_click');" style="width: 15%">UUID</th>
-    <th id="message_{{ type }}" onclick="updateSort(this.id, 'user_click');" style="width: 15%">Message</th>
+    <th id="source_{{ type }}" onclick="updateSort(this.id, 'user_click');" style="width: 15%">Source</th>
+    <th id="result_{{ type }}" onclick="updateSort(this.id, 'user_click');" style="width: 15%">Result</th>
     <th id="task_{{ type }}" onclick="updateSort(this.id, 'user_click');" style="width: 19%">Task</th>
     <th id="received_{{ type }}" onclick="updateSort(this.id, 'user_click');" style="width: 13%">Received</th>
     <th id="started_{{ type }}" onclick="updateSort(this.id, 'user_click');" style="width: 13%">Started</th>
@@ -10,7 +11,8 @@
   {% for task in tasks %}
     <tr>
       <td>{{ task.uuid }}</td>
-      <td>{{ task.message }}</td>
+      <td>{{ task.source }}</td>
+      <td>{{ task.result }}</td>
       <td>{{ task.name }}</td>
       <td sorttable_customkey="{{ task.received_delta_s }}">{{ task.received }}</td>
       <td sorttable_customkey="{{ task.started_delta_s }}">{{ task.started }}</td>
