--- a/openrem/remapp/templates/remapp/celery_tasks_complete.html
+++ b/openrem/remapp/templates/remapp/celery_tasks_complete.html
@@ -11,8 +11,8 @@
   {% for task in tasks %}
     <tr>
       <td>{{ task.uuid }}</td>
-      <td>{{ task.source }}</td>
-      <td>{{ task.result }}</td>
+      <td>{{ task.source|safe }}</td>
+      <td>{{ task.result|safe }}</td>
       <td>{{ task.name }}</td>
       <td sorttable_customkey="{{ task.received_delta_s }}">{{ task.received }}</td>
       <td sorttable_customkey="{{ task.started_delta_s }}">{{ task.started }}</td>
