--- a/openrem/remapp/templates/remapp/exports.html
+++ b/openrem/remapp/templates/remapp/exports.html
@@ -92,6 +92,7 @@
         <th>Exported</th>
         <th>Modality</th>
         <th>Export type</th>
+        <th>Export filters</th>
         <th>No. records</th>
         <th>Export time</th>
         <th>User</th>
@@ -102,6 +103,7 @@
             <td>{{ tsk.export_date|naturaltime }}</td>
             <td>{{ tsk.modality }}</td>
             <td>{{ tsk.export_type }}</td>
+            <td>{{ tsk.export_summary|safe }}</td>
             <td>{{ tsk.num_records }}</td>
             <td>{{ tsk.processtime|naturalduration }} </td>
             <td>{{ tsk.export_user }}</td>
