--- a/openrem/remapp/templates/remapp/displaynameview.html
+++ b/openrem/remapp/templates/remapp/displaynameview.html
@@ -194,7 +194,7 @@
 aborted early in the process. Members of the admingroup can click through to review and delete these studies.</p>
 <span id="failed-list">
 <ul>
-  <li><a href="{% url 'remapp:review_failed_imports' 'CT' %}">CT</a></li>
+  <li><a href="{% url 'review_failed_imports' 'CT' %}">CT</a></li>
   <li><a href="{% url 'review_failed_imports' 'MG' %}">Mammography</a></li>
   <li><a href="{% url 'review_failed_imports' 'DX' %}">Radiography</a></li>
   <li><a href="{% url 'review_failed_imports' 'RF' %}">Fluoro</a></li>
