--- a/openrem/remapp/templates/remapp/displaynameview.html
+++ b/openrem/remapp/templates/remapp/displaynameview.html
@@ -192,14 +192,7 @@
 </a>
 <p>These are studies that do not have an entry in the unique_equipment_name table, and therefore the import would have
 aborted early in the process. Members of the admingroup can click through to review and delete these studies.</p>
-<span id="failed-list">
-<ul>
-  <li><a href="{% url 'review_failed_imports' 'CT' %}">CT</a></li>
-  <li><a href="{% url 'review_failed_imports' 'MG' %}">Mammography</a></li>
-  <li><a href="{% url 'review_failed_imports' 'DX' %}">Radiography</a></li>
-  <li><a href="{% url 'review_failed_imports' 'RF' %}">Fluoro</a></li>
-</ul>
-</span>
+<span id="failed-list"></span>
 
 
 
